fix: badges alignment issue on profile page

--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -18,6 +18,10 @@
   margin: 5px 0;
 }
 
+.badges-grid {
+  margin-left: -2.5px;
+}
+
 .desoc-badge {
   border-radius: 50%;
   width: 45px;
